# botafar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TEST.py  pre-commit  pyproject.toml
.github/workflows/: main.yaml
docs/: .mdl-style.rb
docs/source/: advanced.md  arduino.md  basics.md  bot_lifecycle.md  conf.py  controls.md  development.md  execute_help.md  get_started.md  get_started_help.md  help.md  index.md  install.md  quickstart.md  quickstart_help.md  raspi.md  reference.md  sharing_and_streaming.md  twitch_and_youtube.md
examples/: README.md  button.py  joystick.py  joystick_diagonals.py  lifecycle.py  rc_car.py  simple_button.py  slider.py  stop_and_exit.py  tank.py  time_and_repeat.py
examples/raspberry_pi/: README.md  not_spammable_relay.py  rc_car.py  servo_and_leds.py  servo_immediate.py  servo_partially_smooth.py  servo_smooth.py  tank.py  tank_basic.py  tank_smooth.py  toggle_led.py
src/botafar/: __init__.py  __main__.py
src/botafar/_internal/: exceptions.py  function_utils.py  log_formatter.py  string_utils.py
src/botafar/_internal/callbacks/: callback_base.py
src/botafar/_internal/controls/: button.py  control_base.py  joystick.py  slider.py
src/botafar/_internal/data_channel/: __init__.py  data_channel.py
src/botafar/_internal/decorators/: decorator_base.py  decorators.py
src/botafar/_internal/events/: event.py  system_event.py
src/botafar/_internal/main/: __init__.py  botafar_base.py  cli.py  main.py
src/botafar/_internal/states/: __init__.py  server_event_prosessor.py  server_state_machine.py
src/telebotties/: __init__.py  __main__.py  cli.py  constants.py  listen_keyboard.py  log_formatter.py  string_utils.py  telebotties.py
src/telebotties/_internal/: callback_executor.py  cli.py  constants.py  function_utils.py  ip_addr.py  log_formatter.py  main.py  string_utils.py  telebotties.py  telebotties_base.py
src/telebotties/_internal/callbacks/: __init__.py  callback_base.py  callback_registrars.py
src/telebotties/inputs/: __init__.py  button.py  event.py  input_base.py
src/telebotties/listeners/: __init__.py  listen_enter.py  listen_keyboard.py
src/telebotties/misc/: __init__.py  _string_utils.py
src/telebotties/websocket/: __init__.py  client.py  server.py
tests/: __init__.py  helpers.py  test_button.py  test_decorator_base.py  test_example.py  test_input_keys.py  test_on_init.py  test_on_time.py
(+36 files in other folders)
