[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"

# if versions changed, change also on .pre-commit-config.yaml and .github/workflows/main.yaml
[project]
name = "botafar"
authors = [{name = "Olli Paloviita"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
keywords = ["botafar"]
dependencies = [
    "aiohttp==3.8.1",
    "aiortc-datachannel-only==1.3.2.post3",
    "click==8.1.2",
    "colorlog==6.6.0",
    "nest_asyncio==1.5.5",
    "python-engineio==4.3.4",
    "python-socketio==5.7.1",
    "transitions==0.8.11",
    "varname==0.8.2",
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
]
dev = [
    "black==22.3.0",
    "codespell==2.1.0",
    "flake8==4.0.1",
    "furo==2022.6.21",
    "isort==5.9.3",
    "myst_parser==0.18.0",
    "pep8-naming==0.12.1",
    "pre-commit==2.18.1",
    "pyproject-flake8==0.0.1a2",
    "Sphinx==5.0.2",
    "sphinx-autobuild==2021.3.14",
    "sphinx_copybutton==0.5.0",
    "tox==3.24.4",
]

[project.urls]
Home = "https://github.com/ollipal/botafar"

[project.scripts]
botafar = "botafar:_cli"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37, py38, py39, py310

[testenv]
deps =
    .
    .[test]
commands =
    pytest tests
"""

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | \.env
  | _build
  | build
  | docs/build
  | dist
  | .github
  | __pycache__
)/
'''

[tool.flake8]
ignore = "E203,E231,W503,I202"
max-line-length = 79
max-complexity = 18
select = "B,C,E,F,W,T4,B9,N"
exclude = ".git,.tox,.venv,.env,docs,dist,.github,__pycache__"
per-file-ignores = '''
    ./src/botafar/_internal/constants.py: E501
    */__init__.py:F401
'''